<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAppBack"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtOutput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="@color/colorOutput"
        android:gravity="end"
        android:hint="@string/output_txt"
        android:padding="20dp"
        android:text=""
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@id/btnDivide"
        app:layout_constraintStart_toStartOf="@id/btnCancel"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/btnCancel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_margin="2dp"
        android:padding="10dp"
        android:background="@color/colorNumberCells"
        android:textColor="@color/colorOutput"
        android:text="@string/cancel_btn"
        app:layout_constraintTop_toBottomOf="@id/txtOutput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnChangeSign"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <TextView
        android:id="@+id/btnChangeSign"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_margin="2dp"
        android:padding="10dp"
        android:background="@color/colorNumberCells"
        android:textColor="@color/colorOutput"
        android:text="@string/changeSign_btn"
        app:layout_constraintTop_toBottomOf="@id/txtOutput"
        app:layout_constraintStart_toEndOf="@id/btnCancel"
        app:layout_constraintEnd_toStartOf="@id/btnPercent"/>

    <TextView
        android:id="@+id/btnPercent"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_margin="2dp"
        android:padding="10dp"
        android:background="@color/colorNumberCells"
        android:textColor="@color/colorOutput"
        android:text="@string/percent_btn"
        app:layout_constraintTop_toBottomOf="@id/txtOutput"
        app:layout_constraintStart_toEndOf="@id/btnChangeSign"
        app:layout_constraintEnd_toStartOf="@id/btnDivide"/>

    <TextView
        android:id="@+id/btnDivide"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_margin="2dp"
        android:padding="10dp"
        android:background="@color/colorOperations"
        android:textColor="@color/colorOutput"
        android:text="@string/divide_btn"
        app:layout_constraintTop_toBottomOf="@id/txtOutput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnPercent"/>

    <TextView
        android:id="@+id/btn7"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_margin="2dp"
        android:padding="10dp"
        android:background="@color/colorNumberCells"
        android:textColor="@color/colorOutput"
        android:text="@string/seven_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCancel"
        app:layout_constraintEnd_toStartOf="@id/btn8"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <TextView
        android:id="@+id/btn8"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_margin="2dp"
        android:padding="10dp"
        android:background="@color/colorNumberCells"
        android:textColor="@color/colorOutput"
        android:text="@string/eight_btn"
        app:layout_constraintTop_toBottomOf="@id/btnChangeSign"
        app:layout_constraintStart_toEndOf="@id/btn7"
        app:layout_constraintEnd_toStartOf="@id/btn9"/>

    <TextView
        android:id="@+id/btn9"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_margin="2dp"
        android:padding="10dp"
        android:background="@color/colorNumberCells"
        android:textColor="@color/colorOutput"
        android:text="@string/nine_btn"
        app:layout_constraintTop_toBottomOf="@id/btnPercent"
        app:layout_constraintStart_toEndOf="@id/btn8"
        app:layout_constraintEnd_toStartOf="@id/btnMultiply"/>

    <TextView
        android:id="@+id/btnMultiply"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_margin="2dp"
        android:padding="10dp"
        android:background="@color/colorOperations"
        android:textColor="@color/colorOutput"
        android:text="@string/multiply_btn"
        app:layout_constraintTop_toBottomOf="@id/btnDivide"
        app:layout_constraintStart_toEndOf="@id/btn9"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/btn4"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_margin="2dp"
        android:padding="10dp"
        android:background="@color/colorNumberCells"
        android:textColor="@color/colorOutput"
        android:text="@string/four_btn"
        app:layout_constraintTop_toBottomOf="@id/btn7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn5"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <TextView
        android:id="@+id/btn5"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_margin="2dp"
        android:padding="10dp"
        android:background="@color/colorNumberCells"
        android:textColor="@color/colorOutput"
        android:text="@string/five_btn"
        app:layout_constraintTop_toBottomOf="@id/btn8"
        app:layout_constraintStart_toEndOf="@id/btn4"
        app:layout_constraintEnd_toStartOf="@id/btn6"/>

    <TextView
        android:id="@+id/btn6"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_margin="2dp"
        android:padding="10dp"
        android:background="@color/colorNumberCells"
        android:textColor="@color/colorOutput"
        android:text="@string/six_btn"
        app:layout_constraintTop_toBottomOf="@id/btn9"
        app:layout_constraintStart_toEndOf="@id/btn5"
        app:layout_constraintEnd_toStartOf="@id/btnMinus"/>

    <TextView
        android:id="@+id/btnMinus"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_margin="2dp"
        android:padding="10dp"
        android:background="@color/colorOperations"
        android:textColor="@color/colorOutput"
        android:text="@string/minus_btn"
        app:layout_constraintTop_toBottomOf="@id/btnMultiply"
        app:layout_constraintStart_toEndOf="@id/btn6"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/btn1"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_margin="2dp"
        android:padding="10dp"
        android:background="@color/colorNumberCells"
        android:textColor="@color/colorOutput"
        android:text="@string/one_btn"
        app:layout_constraintTop_toBottomOf="@id/btn4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn2"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <TextView
        android:id="@+id/btn2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_margin="2dp"
        android:padding="10dp"
        android:background="@color/colorNumberCells"
        android:textColor="@color/colorOutput"
        android:text="@string/two_btn"
        app:layout_constraintTop_toBottomOf="@id/btn5"
        app:layout_constraintStart_toEndOf="@id/btn1"
        app:layout_constraintEnd_toStartOf="@id/btn3"/>

    <TextView
        android:id="@+id/btn3"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_margin="2dp"
        android:padding="10dp"
        android:background="@color/colorNumberCells"
        android:textColor="@color/colorOutput"
        android:text="@string/three_btn"
        app:layout_constraintTop_toBottomOf="@id/btn6"
        app:layout_constraintStart_toEndOf="@id/btn2"
        app:layout_constraintEnd_toStartOf="@id/btnAdd"/>

    <TextView
        android:id="@+id/btnAdd"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_margin="2dp"
        android:padding="10dp"
        android:background="@color/colorOperations"
        android:textColor="@color/colorOutput"
        android:text="@string/add_btn"
        app:layout_constraintTop_toBottomOf="@id/btnMinus"
        app:layout_constraintStart_toEndOf="@id/btn3"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/btn0"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_margin="2dp"
        android:padding="10dp"
        android:background="@color/colorNumberCells"
        android:textColor="@color/colorOutput"
        android:text="@string/zero_btn"
        app:layout_constraintTop_toBottomOf="@id/btn1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnPoint"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <TextView
        android:id="@+id/btnPoint"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_margin="2dp"
        android:padding="10dp"
        android:background="@color/colorNumberCells"
        android:textColor="@color/colorOutput"
        android:text="@string/point_btn"
        app:layout_constraintTop_toBottomOf="@id/btn3"
        app:layout_constraintStart_toEndOf="@id/btn0"
        app:layout_constraintEnd_toStartOf="@id/btnEquals"/>

    <TextView
        android:id="@+id/btnEquals"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_margin="2dp"
        android:padding="10dp"
        android:background="@color/colorOperations"
        android:textColor="@color/colorOutput"
        android:text="@string/equals_btn"
        app:layout_constraintTop_toBottomOf="@id/btnAdd"
        app:layout_constraintStart_toEndOf="@id/btnPoint"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>